--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -19,7 +19,6 @@ a {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  width: 90%;
   margin: 0 auto;
   margin-bottom: 30px;
 
